2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs:
	  Track API.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.Dialogs/WebReferenceDialog.cs,
	  gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.WebReferences.Dialogs.WebReferenceDialog.cs:
	  Updated generated code.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.NodeBuilders/ProjectFolderNodeBuilderExtension.cs,
	  MonoDevelop.WebReferences.NodeBuilders/ProjectNodeBuilder.cs,
	  MonoDevelop.WebReferences.NodeBuilders/WebReferenceFolderNodeBuilder.cs,
	  MonoDevelop.WebReferences.NodeBuilders/WebReferenceNodeBuilder.cs,
	  MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs:
	  Moved the extensible tree view to its own directory.

2008-06-18  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.WebReferences/WebReferenceItem.cs: Update web reference 
	  over the network.

2008-06-17  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs: 
	  Auto-add necessary references.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml: Bump MD version.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.NodeBuilders/WebReferenceFolderNodeBuilder.cs,
	  MonoDevelop.WebReferences/WebReferenceItem.cs,
	  MonoDevelop.WebReferences/Library.cs,
	  MonoDevelop.WebReferences/WebReferenceItemCollection.cs,
	  MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs,
	  gtk-gui/MonoDevelop.WebReferences.Dialogs.WebReferenceDialog.cs:
	  New project model changes.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs,